_sass/_jump-menu.scss
/* Anchorlink menu on CV Page
------------------------------*/
.jump-menu {
	display: none; // hide on small screens

	@include breakpoint(md) {
		display: block; // show again
		position: fixed;
		left: 0.5em;
		top: 50%;
		will-change: transform; // creates a new paint layer
		transform: translate3d(0, -50%, 0);
		z-index: 666;
	}
	
	// text in hover buttons
	span {
		display: inline-block;
		opacity: 0;
		will-change: opacity;
		padding-right: 1.5em;
		padding-left: 2.5em;
	}

	a {
		font-family: $font-sans-serif;
		margin: 0.1em 0;
		height: 3rem;
		position: relative; 
		color: $brand-color;
		border: 0.09rem solid transparent;
		border-radius: 1.25em;

		&:before {
			content: "";
			width: 9px;
			height: 9px;
			background: $text-color;
			border: 0.09rem solid white;			
			border-radius: 50%;
			top: 50%;
			left: 1.5em;
			transform: translate3d(0, -50%, 0);
			display: block;
			position: relative;
		}

		&:hover {
			color: white;
			border-color: currentColor;
			background: $text-color;

			span {
				opacity: 1;
				color: white;
				transition: 0.3s;
			}
		}
		
		&:focus:before,
		&:hover:before,
		&.active:before {
			height: 9px;
			background: $brand-color;
			border-color: $brand-color;
		}
	}
}

